--- a/app/assets/stylesheets/user_searchs/index-rspnsv.css
+++ b/app/assets/stylesheets/user_searchs/index-rspnsv.css
@@ -2,9 +2,9 @@
     .search-box{
         border: solid thin #9B9B9B;
         border-radius: 8px;
-        color: #9B9B9B;
+        color: #4c4c4c;
         height: 40px;
-        margin: 30px 10px;
+        margin: 30px auto;
         padding: 0px 10px;
         width: 300px;
     }
@@ -16,6 +16,10 @@
         margin:30px auto;
         text-align: center;
         width: 320px;
+    }
+
+    .discription p{
+        font-size:12px;
     }
 
     .enter{
@@ -35,9 +39,14 @@
 
     .user-box{
         height: 50px;
-        margin: 15px 0px;
+        margin: 0px 10px;
         position: relative;
-        width: 320px;
+        width: 300px;
+    }
+
+    .flwBtn{
+        height: 24px;
+        width: 90px;
     }
 
     .user-icon{
