--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,9 +8,9 @@
                     <ul>
                         <li><%= link_to "ホーム", current_user %></li>
                         <li><%= link_to "新しいスポットを登録", places_path %></li>
-                        <li><%= link_to "マイマップを作成", new_mymap_path %></li>
+                        <li><%= link_to "マイリストを作成", new_mymap_path %></li>
                         <li><%= link_to "ユーザーを検索", following_users_user_searchs_path %></li>
-                        <li><%= link_to "マイマップを検索", recomend_mymaps_mymap_searchs_path %></li>
+                        <li><%= link_to "マイリストを検索", recomend_mymaps_mymap_searchs_path %></li>
                         <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete%></li>
                     </ul>
                 </div>
