--- a/app/views/user_searchs/facebook_users.html.erb
+++ b/app/views/user_searchs/facebook_users.html.erb
@@ -1,5 +1,5 @@
-<%= stylesheet_link_tag "user_searchs/facebook_users", :media => "all" %>
-<%= stylesheet_link_tag "user_searchs/facebook_users-rspnsv", :media => "all" %>
+<%= stylesheet_link_tag "user_searchs/facebook_users.css", :media => "all" %>
+<%= stylesheet_link_tag "user_searchs/index-rspnsv.css", :media => "all" %>
         <content>
             <%= form_tag({action: 'index'}, {method: :get}) do %>
               <input type="text" name="search" id="search" class="search-box" placeholder="探したいユーザ名を入力">
