--- a/app/views/user_searchs/index.html.erb
+++ b/app/views/user_searchs/index.html.erb
@@ -1,5 +1,5 @@
-<%= stylesheet_link_tag "user_searchs/index", :media => "all" %>
-<%= stylesheet_link_tag "user_searchs/index-rspnsv", :media => "all" %>
+<%= stylesheet_link_tag "user_searchs/index.css", :media => "all" %>
+<%= stylesheet_link_tag "user_searchs/index-rspnsv.css", :media => "all" %>
         <content>
             <h1>検索結果</h1>
             <%= form_tag({action: 'index'}, {method: :get}) do %>
