--- a/app/views/users/all_mymap_spots.html.erb
+++ b/app/views/users/all_mymap_spots.html.erb
@@ -58,4 +58,4 @@
                 <% end %>
             </div>
         </content>
-        <a href="/mymaps/search?user_id=<%= @user.id %>" id="hoge" class="enter">マイマップからスポットを検索</a>
+        <a href="/mymaps/search?user_id=<%= @user.id %>" id="hoge" class="enter">マイリストからスポットを検索</a>
