--- a/app/views/users/self_mymaps.html.erb
+++ b/app/views/users/self_mymaps.html.erb
@@ -15,8 +15,8 @@
             </div>
             <%= render 'relationships/follow_button', user: @user %>
             <div class="discription">
-                <p class="disc-2"><a href="/users/<%= @user.id %>/self_mymaps">作成した<br>マイマップ</a></p>
-                <p class="disc-1"><a href="/users/<%= @user.id %>/like_mymaps">お気に入り<br>マイマップ</a></p>
+                <p class="disc-2"><a href="/users/<%= @user.id %>/self_mymaps">作成した<br>マイリスト</a></p>
+                <p class="disc-1"><a href="/users/<%= @user.id %>/like_mymaps">お気に入り<br>マイリスト</a></p>
             </div>
 
             <div class="boxContainer">
@@ -85,11 +85,11 @@
                   <div class="box">
                     <a class="mymaps_title" href="/mymaps/new" value="">
                     <%= image_tag "logo2.png", class: "box-pic"%>
-                    <p class="title">新しいマイマップを作成</p>
+                    <p class="title">新しいマイリストを作成</p>
                     </a>
                   </div>
                 <% end %>
             </div>
         </content>
-        <a href="/mymaps/search?user_id=<%= @user.id %>" id="hoge" class="enter">マイマップからスポットを検索</a>
+        <a href="/mymaps/search?user_id=<%= @user.id %>" id="hoge" class="enter">マイリストからスポットを検索</a>
 
