--- a/app/assets/stylesheets/mymap_searchs/index.css
+++ b/app/assets/stylesheets/mymap_searchs/index.css
@@ -1,7 +1,7 @@
 .search-box{
     border: solid thin #9B9B9B;
     border-radius: 8px;
-    color: #9B9B9B;
+    color: #4c4c4c;
     height: 40px;
     margin: 30px 20px;
     padding: 0px 10px;
@@ -105,6 +105,7 @@
     top: 36px;
     left: 18px;
     width: 120px;
+    text-overflow: ellipsis;
 }
 
 .dot-box{
