--- a/app/assets/stylesheets/mymap_searchs/recomend_mymaps-rspnsv.css
+++ b/app/assets/stylesheets/mymap_searchs/recomend_mymaps-rspnsv.css
@@ -2,12 +2,13 @@
     .search-box{
         border: solid thin #9B9B9B;
         border-radius: 8px;
-        color: #9B9B9B;
+        color: #4c4c4c;
         height: 40px;
-        margin: 30px 10px;
+        margin: 30px auto;
         padding: 0px 10px;
         width: 300px;
     }
+
     .discription{
         color: #9B9B9B;
         font-size: 10px;
@@ -17,6 +18,11 @@
         text-align: center;
         width: 320px;
     }
+
+    .discription p{
+        font-size: 12px;
+    }
+
     .disc-1{
         border-bottom: solid medium #70CADF; 
         color: #696969;
@@ -106,6 +112,7 @@
         top: 36px;
         left: 18px;
         width: 112px;
+        text-overflow: ellipsis;
     }
 
     .enter{
