--- a/app/assets/stylesheets/user_searchs/index.css
+++ b/app/assets/stylesheets/user_searchs/index.css
@@ -1,7 +1,7 @@
 .search-box{
     border: solid thin #9B9B9B;
     border-radius: 8px;
-    color: #9B9B9B;
+    color: #4c4c4c;
     height: 40px;
     margin: 30px 20px;
     padding: 0px 10px;
@@ -41,9 +41,14 @@
 
 .user-box{
     height: 50px;
-    margin: 15px 0px;
+    margin: 15px auto;
     position: relative;
-    width: 345px;
+    width: 335px;
+}
+
+.flwBtn{
+    height: 30px;
+    width: 115px;
 }
 
 .user-icon{
