--- a/app/views/mymap_searchs/index.html.erb
+++ b/app/views/mymap_searchs/index.html.erb
@@ -3,12 +3,12 @@
 <h1>検索結果</h1>
         <content>
             <%= form_tag({action: 'index'}, {method: 'get'}) do %>
-              <input type="text" name="search" id="search" class="search-box" placeholder="探したいマイマップ名やタグを検索" >
+              <input type="text" name="search" id="search" class="search-box" placeholder="探したいマイリスト名やタグを検索" >
               <%= submit_tag '検索', :name => nil %>
             <% end %>
             <div class="discription">
-                <p class="disc-1"><a href="/mymap_searchs/recomend_mymaps">おすすめの<br>マイマップ</a></p>
-                <p class="disc-2"><a href="/mymap_searchs/following_mymaps">フォローユーザーの<br>新着マイマップ</a></p>
+                <p class="disc-1"><a href="/mymap_searchs/recomend_mymaps">おすすめの<br>マイリスト</a></p>
+                <p class="disc-2"><a href="/mymap_searchs/following_mymaps">フォローユーザーの<br>新着マイリスト</a></p>
             </div>
         </content>
         <% if @mymaps %>
