--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -11,7 +11,7 @@
             <div class="nums">
                 <div class="num" id="map-num">
                     <h2><%= @count_mymaps %></h2>
-                    <p>マイマップ</p>
+                    <p>マイリスト</p>
                 </div>
                 <div class="num" id="follow-num">
                     <h2><%= @count_followings %></h2>
@@ -32,5 +32,5 @@
                 <p><%= link_to "編集", edit_user_path(current_user) %></p>
             </div>
             <% end %>
-            <div class="enter"><%= link_to "このユーザーのマイマップを見る", @user %></div>
+            <div class="enter"><%= link_to "このユーザーのマイリストを見る", @user %></div>
         </content>
